# siemens_rpp_rust

./: .dockerignore  .env.example  .gitignore  Cargo.toml  docker-compose.yaml
crates/rpp_db/: Cargo.toml
crates/rpp_db/src/: app_run_log.rs  lib.rs  pool.rs
crates/rpp_log/: Cargo.toml
crates/rpp_log/src/: enums.rs  event.rs  lib.rs  run_log.rs  sink.rs  tracing_init.rs
crates/rpp_redis/: Cargo.toml
crates/rpp_redis/src/: lib.rs
crates/siemens_rpp/: Cargo.toml
crates/siemens_rpp/src/: boot.rs  cli.rs  config.rs  error.rs  hello.rs  lib.rs  main.rs  path.rs  runner.rs  types.rs
crates/siemens_rpp/src/parse/: blank_line.rs  mod.rs  win10.rs
crates/siemens_rpp/tests/: parse_fixture.rs
crates/siemens_rpp/tests/fixtures/: README.md
docker/: Dockerfile  entrypoint.sh
markdown/: ARCHITECTURE_PRINCIPLES.md  CODEX_REVIEW_TEMPLATE.md  DEPLOYMENT.md  FLOW.md  IMPLEMENTATION_RULES.md  PHASE_LOG.md  PHASE_TEMPLATE.md  PROMPTS.md  REVIEW_CHECKLIST.md  TECHNICAL_DECISIONS.md  siemens_rpp_plan.md
notes/: README.md  codex_handoff_phase_0.txt  codex_handoff_phase_0_5.txt  codex_handoff_phase_1.txt  codex_review_phase_0.txt  codex_review_phase_0_5.txt
