[package]
name = "rpp_redis"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

# Shared, fleet-wide Redis access. Matches the Node connection contract exactly:
# host + port, no auth, no TLS, no db selector. Provides typed cursor helpers for
# the `${sme}.${file_name}` key convention.

[dependencies]
redis = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
